--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
               <p>Strezlecki Desert, Australia</p>
             </div>
           </div>
-        </div>
+          <div class="card">
+            <img src="public/img/turtle.jpg" alt="sea turtle swimming">
+          </div>
+          <div class="card">
+            <img src="public/img/walrus.jpg" alt="walrus swimming with bubbles">
+          </div>
+        </div>d
         <!-- end tree picture and caption -->
         <!--  v  add pictures and captions below  v  -->
 
-        
+
 
         <!--  ^  add pictures and captions above  ^  -->
       </div>
