--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
           <div class="card">
             <img src="public/img/turtle.jpg" alt="sea turtle swimming">
           </div>
-          <div class="card">
-            <img src="public/img/walrus.jpg" alt="walrus swimming with bubbles">
-          </div>
+          <div class="center-container">
+            <div class="card">
+              <img src="public/img/polar-bear.jpg" alt="polar bear on ice">
+            </div>
+              <div class="card">
+                <div class="caption">
+                  <h4>Arctic Hi Five</h4>
+                  <p>Colin Mackenzie</p>
+                  <p>Svalbard, northern Norway</p>
+                </div>
+              </div>
+            </div>
         </div>d
         <!-- end tree picture and caption -->
         <!--  v  add pictures and captions below  v  -->
